# wechat-autoreply

./: .gitignore  CONTRIBUTING.md  PRIVACY.md  README.md  SECURITY.md  pyproject.toml  sendwechat.scpt
autoreply/: README.md  __init__.py  adaptive_scheduler.py  build_sender_app.sh  config.env.example  control.sh  diagnose.sh  generate_replies.py  install_cron.sh  now.sh  poll_unread.py  request_permissions.sh  run_now.py  run_poll.sh  send_replies.py  test_adaptive_scheduler.py  test_applescript.sh  test_generate_replies.py  test_poll_unread.py  test_run_now.py  test_send_replies.py  使用手册.md
