[project]
name = "wechat-auto-reply"
version = "0.1.0"
description = "Local WeChat private-message auto-reply scripts powered by a local OpenAI-compatible model."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "wechat-cli",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[project.scripts]
wechat-autoreply-now = "autoreply.run_now:main"
wechat-autoreply-generate = "autoreply.generate_replies:main"
wechat-autoreply-send = "autoreply.send_replies:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["autoreply"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["autoreply"]

[tool.uv.sources]
wechat-cli = { git = "https://github.com/huohuoer/wechat-cli.git", rev = "a3789232d4f79bf0b30634d9dadbce71e4acd601" }
